It is more efficient to allow the VM to manage the auto-boxing of certain primitives than it is to invoke the object constructor.
This change cleans up Byte & Short for this.

Tests have been left untouched because we expressly want to do handle the boxing in each particular test.